testdata/baselines/reference/submodule/conformance/importTag15(module=esnext).errors.txt
1.js(1,5): error TS8006: 'import type' declarations can only be used in TypeScript files.
1.js(1,30): error TS2857: Import attributes cannot be used with type-only imports or exports.
1.js(2,5): error TS8006: 'import type' declarations can only be used in TypeScript files.
1.js(2,33): error TS2857: Import attributes cannot be used with type-only imports or exports.
1.js(4,13): error TS8010: Type annotations can only be used in TypeScript files.


==== 0.ts (0 errors) ====
    export interface I { }
    
==== 1.js (5 errors) ====
    /** @import { I } from './0' with { type: "json" } */
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8006: 'import type' declarations can only be used in TypeScript files.
                                 ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2857: Import attributes cannot be used with type-only imports or exports.
    /** @import * as foo from './0' with { type: "json" } */
        ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS8006: 'import type' declarations can only be used in TypeScript files.
                                    ~~~~~~~~~~~~~~~~~~~~~
!!! error TS2857: Import attributes cannot be used with type-only imports or exports.
    
    /** @param {I} a */
                ~
!!! error TS8010: Type annotations can only be used in TypeScript files.
    function f(a) {}
    